# aws-hpc-ray-slurm-adventures

./: tokenizer.rs
notebooks/: allenai-sroc-dataset-eda.ipynb  hf-datasets-exploration.ipynb  hf-tokenizers-rust.ipynb  ray-experiment.ipynb
notebooks/tokken3/: Cargo.toml
notebooks/tokken3/src/: lib.rs  python_module.rs
scripts/: 000_install_miniforge.sh  001_install_mamba.sh  002_setup_env.sh  003_install_ngrok.sh
tokenizer/tokken3/: Cargo.toml
